--- a/main.css
+++ b/main.css
@@ -1,15 +1,28 @@
 body {
   background-color: #2E4052;
+  color: #F0F1F2;
+  font-family: 'PT Serif', serif;
+  padding: 30px;
+}
+
+#toggle {
+  position: fixed;
+  right: 20px;
+  top: 100px;
+}
+
+.light {
+  background-color: #F0F1F2;
+  color: #2E4052;
 }
 
 h1 {
-  color: #F0F1F2;
   text-align: center;
-  margin: 40px;
+  margin: 20px 0 80px 0;
 }
 
 h2 {
-  color: #F0F1F2;
+  margin-top: 30px;
   text-transform: capitalize;
 }
 
@@ -17,7 +30,7 @@ ul {
   max-width: 800px;
 }
 
-li {
+.colors li {
   color: #687685;
   list-style: none;
   width: 165px;
@@ -25,13 +38,27 @@ li {
   display: inline-block;
   margin: 6px;
   border-radius: 3px;
+  border: 1px solid #344A5F;
 }
 
-li p {
+.colors li p {
   background-color: #FFFFFF;
   position: relative;
-  top: 140px;
+  top: 138px;
   padding: 18px;
   text-align: center;
   border-radius: 0 0 3px 3px;
+}
+
+.fonts li {
+  list-style: none;
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.fonts li a {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+  border-bottom: 1px solid white;
 }
