--- a/main.css
+++ b/main.css
@@ -17,9 +17,9 @@ body {
 }
 
 a {
-  color: white;
+  color: #4AB471;
   text-decoration: none;
-  border-bottom: 1px solid white; 
+  border-bottom: 1px solid #4AB471; 
 }
 
 h1 {
